fix:Add site favicon and resolve blurriness issue on map display

--- a/countries/count.css
+++ b/countries/count.css
@@ -18,7 +18,7 @@ section:nth-of-type(2){
 }
 
 section:nth-of-type(3){
-    background-image: linear-gradient(-180deg, red 30%, blue 35%, blue 60%, green 50% );
+    background-image: linear-gradient(180deg, red 33.3%, blue 33.3%, blue 66.6%, green 66.6% );
 
 }
 
